# flask-fb-clone

./: README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/users/: models.py  resources.py  schemas.py
migrations/versions/: 540ebd490def_add_user_model.py  6160a2de713e_.py  d9d422bf45b7_.py
src/flask_fb_clone/: __init__.py  config.py  dev_database.db
src/flask_fb_clone/models/: user.py
src/flask_fb_clone/utils/: result.py
